crates/perl-lsp-rs/tests/snapshots/lsp_code_actions_snap__code_actions_unfiltered.snap
---
source: crates/perl-lsp-rs/tests/lsp_code_actions_snap.rs
expression: normalized
---
- has_command: false
  has_edit: true
  kind: quickfix
  title: "Add 'package main;' declaration"
- has_command: false
  has_edit: true
  kind: refactor.extract.variable
  title: "Extract 'open(my $fh, '<', 'data.txt')' to variable"
- has_command: false
  has_edit: true
  kind: refactor.rewrite
  title: "Add error checking to 'open'"
